Perkin-UAT/force-app/main/default/objects/Contract_Line_Item__c/fields/Inv_Amt__c.field-meta.xml
<CustomField>
    <fullName>Inv_Amt__c</fullName>
    <label>Inv Amt</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>