Perkin-UAT/force-app/main/default/objects/Contract_Line_Item__c/fields/Maintenance_Plant__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Plant__c</fullName>
    <label>Maintenance Plant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>