Perkin-UAT/force-app/main/default/objects/Contract_Line_Item__c/fields/MatNum__c.field-meta.xml
<CustomField>
    <fullName>MatNum__c</fullName>
    <label>MatNum</label>
    <length>15</length>
    <type>Text</type>
</CustomField>