Perkin-UAT/force-app/main/default/objects/Contract_Line_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>